# CIS194

./: README.md  hw1.hs  test.hs
hw1/: hw1.cabal
hw1/app/: Main.hs
hw1/src/: HW01.hs
hw2/: hw2.cabal
hw2/src/: HW02.hs
hw3/: HW03.hs
lecture_notes/: lecture2.hs  lecture3.hs
spring13/hw2/: LogAnalysis.hs  hw2.cabal
spring13/hw2/app/: Main.hs
spring13/hw2/src/: LogAnalysis.hs
spring13/hw3/: hw3.cabal
spring13/hw3/app/: Main.hs
spring13/hw3/src/: Golf.hs
spring13/hw4/: LICENSE  hw4.cabal
spring13/hw4/app/: Main.hs
spring13/hw4/src/: HW4.hs
spring13/hw5/: hw5.cabal
spring13/hw5/app/: Main.hs
spring13/hw5/src/: Calc.hs
spring13/hw6/: hw6.cabal  stack.yaml
spring13/hw6/app/: Main.hs
spring13/hw6/src/: Fibonacci.hs
spring13/lecture_notes/: lecture3.hs  lecture4.hs  lecture5.hs  lecture6.hs
spring15/hw1/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/doc/hw1-0.1.0.0/: LICENSE
spring15/hw1/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/flag-cache/: hw1-0.1.0.0-ab975c6dfddab82dfb3bd51e9ca204b5
spring15/hw1/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/lib/x86_64-osx-ghc-7.10.2/hw1-0.1.0.0-JVMlZnu4bb89gOdH7qD1F5/: libHShw1-0.1.0.0-JVMlZnu4bb89gOdH7qD1F5-ghc7.10.2.dylib
spring15/hw1/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/pkgdb/: hw1-0.1.0.0-ab975c6dfddab82dfb3bd51e9ca204b5.conf  package.cache
spring15/hw1/src/: HW01.hs
spring15/hw2/: LICENSE
spring15/hw2/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/flag-cache/: hw2-0.1.0.0-d017f672c7e34b72d9eb5a34c31e9628  hw2-0.1.0.0-f05d840715aade90fc5221e6b48bd9e2
spring15/hw2/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/lib/x86_64-osx-ghc-7.10.2/hw2-0.1.0.0-A5y52is64x8Angxr5cQPyn/: HW02.hi
spring15/hw2/.stack-work/install/x86_64-osx/lts-3.17/7.10.2/pkgdb/: hw2-0.1.0.0-f05d840715aade90fc5221e6b48bd9e2.conf  package.cache
spring15/hw2/src/: HW02.hs
spring15/hw3/: HW03.hs  hw3.cabal  stack.yaml
spring15/hw3/app/: Main.hs
spring15/hw3/src/: HW03.hs
