name:                hw5
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/pnaranja/hw5#readme
license:             BSD3
license-file:        LICENSE
author:              Paul Naranja
maintainer:          paul.naranja@gmail.com
copyright:           Copyright: (c) 2015 Paul Naranja
category:            Tutorials
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Calc
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hw5-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw5
  default-language:    Haskell2010

test-suite hw5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pnaranja/hw5
